# Masters-Degree

./: .gitignore  README.md
Numerical Methods/Exercise 1/: Answers.tex
Numerical Methods/Exercises 2/: Answers.tex
Numerical Methods/Exercises 4/: data.cpp
Open Quantum Systems/: QIA-20-h01.tex
Open Quantum Systems/Problem Set 2/: Solutions.tex
Open Quantum Systems/Problem Set 3/: Solutions to Exercise set 3 JM.tex
Open Quantum Systems/Problem Set 4/: Solutions to Exercise set 4 JM.tex
Open Quantum Systems/Problem Set 5/: Solutions to Exercise set 5 JM.tex
Open Quantum Systems/Problem Set 6/: Solutions to Exercise set 6 JM.tex
Open Quantum Systems/Problem Set 7/: Solutions to Exercise set 7 JM.tex
PAP334 Statistical Methods/Home Exam/: 1 ii.ipynb  Exam.ipynb  (+10 more)
Quantum Information/: README
libraries/prng-3.0.2/: AUTHORS  ChangeLog  INSTALL  KNOWN-PROBLEMS  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
libraries/prng-3.0.2/doc/: Makefile.am  Makefile.in  prng.dvi  prng.info  prng.ps  prng.texi  prng.txt  stamp-vti  tables.texi  theory.texi  usage.texi
libraries/prng-3.0.2/doc/prng.html/: AFILE.html  ANTI.html  BFILE.html  COMPOUND.html  CON.html  DICG.html  Definitions.html  Description.html  EICG.html  EXTERNAL.html  Examples.html  Functions.html  ICG.html  Install.html  LCG.html  MEICG.html  MT19937.html  QCG.html  Reading.html  Remarks.html  SUB.html  Table_ICG.html  Table_LCG.html  Tables.html  Theory.html  Usage.html  index.html
libraries/prng-3.0.2/examples/: Makefile.am  Makefile.in  pairs.c  tuples.c
libraries/prng-3.0.2/src/: Makefile.am  Makefile.in  anti.c  compound.c  cons.c  dicg.c  eicg.c  external.c  file.c  icg.c  lcg.c  meicg.c  mt19937.c  prng.c  qcg.c  sub.c  support.c
libraries/prng-3.0.2/tests/: Makefile.am  Makefile.in  iter.c  validate.c
(+253 files in other folders)
